--- a/src/app/home/modal/submit-report-modal.page.scss
+++ b/src/app/home/modal/submit-report-modal.page.scss
@@ -36,6 +36,13 @@ h1 {
     font-size: 14px;
 }
 
+.missing-seeds {
+    margin: 0;
+    text-align: center;
+    color: #3d2629;
+    font-size: 16px;
+}
+
 .taken-img {
     max-width: 200px;
     border: 2px dashed #293d26;
