Hotfix estimated yield amount

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -71,7 +71,7 @@
             <ion-col style="text-align: right">
               <ion-chip style="padding: 1.5em">
                 <ion-icon name="speedometer" color="primary"></ion-icon>
-                <ion-label routerLink='/home' translate>home.expected-yield<br>{{ estimatedYieldAmount }} kg</ion-label>
+                <ion-label routerLink='/home'>home.expected-yield<br>{{ estimatedYieldAmount }} kg</ion-label>
               </ion-chip>
             </ion-col>
           </ion-row>
