[Fix] Improve UI design of report verification status (#22)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,9 +22,8 @@
           </ion-item>
         </form>
 
-        <h1 *ngIf="currentSeedStage; else noCurrentSeedStage" style="padding-top: 1em;" translate>
-          {{ translateSeedStage(currentSeedStage) }}
-        </h1>
+        <h1 *ngIf="currentSeedStage; else noCurrentSeedStage" style="padding-top: 1em;">{{
+          translateSeedStage(currentSeedStage) }}</h1>
         <ng-template #noCurrentSeedStage>
           <h1 style="padding-top: 1em;"routerLink='/home' translate>home.stage-1_title</h1>
         </ng-template>
@@ -38,7 +37,7 @@
 
         <p style="margin-bottom: 0.75em" routerLink='/home' translate>home.report-button-header</p>
 
-        <button *ngIf="nextSeedStage" id="aniButton" (click)="onBeginSubmitFarmerReport()" translate>
+        <button *ngIf="nextSeedStage" id="aniButton" (click)="onBeginSubmitFarmerReport()">
           {{ translateSeedStage(nextSeedStage) }}
         </button>
 
@@ -55,7 +54,7 @@
         </ion-item-divider>
 
         <div class="ani-content" style="text-align: center; margin-bottom: 2em;">
-          <h1 style="font-size:50px; line-height: 50px; color:#242424" routerLink='/home'>{{ estimatedYieldDayEarliest }} - {{
+          <h1 style="font-size:50px; line-height: 50px; color:#242424" routerLink='/home' translate>{{ estimatedYieldDayEarliest }} - {{
             estimatedYieldDayLatest }} <h1 style="font-size:50px; line-height: 50px; color:#242424" translate>home.bilang-na-araw</h1></h1>
           <p routerLink='/home' translate>home.profit-footer</p>
         </div>
@@ -71,7 +70,7 @@
             <ion-col style="text-align: right">
               <ion-chip style="padding: 1.5em">
                 <ion-icon name="speedometer" color="primary"></ion-icon>
-                <ion-label routerLink='/home'><span translate>home.expected-yield</span><br>{{ estimatedYieldAmount }} kg</ion-label>
+                <ion-label routerLink='/home' translate>home.expected-yield<br>{{ estimatedYieldAmount | number:'1.0':'en-US' }} kg</ion-label>
               </ion-chip>
             </ion-col>
           </ion-row>
@@ -86,33 +85,41 @@
       <ion-card-content style="padding: 10px">
         <h1 routerLink='/home' translate>home.submitted-reports</h1>
         <ion-item-divider style="margin-top: -25px; background: rgba(0,0,0,0.0);"></ion-item-divider><br>
-
-        <ion-grid style="background-color: #e9e9e9;border-radius: 50px;padding: 20px; margin-bottom: 10px">
-          <ion-row *ngFor="let farmerReport of submittedFarmerReports; let i = index">
-            <ion-col size="9" style="color:#202020;font-weight: bold;">
-              <div *ngIf="farmerReport.isVerified; else unverified">
-                <span class="text"
-                  title="{{ 'Ang itong report ay nasuri na ni ' + farmerReport.verifier.firstName + ' ' + farmerReport.verifier.lastName }}" translate>
-                  <!-- {{ i + 1 }}. -->
+        <ion-grid *ngFor="let farmerReport of submittedFarmerReports; let i = index">
+        <div *ngIf="farmerReport.isVerified; else unverified">
+          <ion-row style="background-color: #356649;padding:20px; margin-bottom: 5px; border-radius:50px">
+            <ion-col size="9" style="color:#ffffff;">
+              <div>
+                <span class="text" style="font-weight: bold;">
                   {{ translateSeedStage(farmerReport.seedStage) }}
-                  <ion-icon name="checkmark-circle" color="primary"></ion-icon>
                 </span>
               </div>
-
-              <ng-template #unverified>
-                <span class="text" title="Ang itong report ay hindi pa nasusuri" translate>
-                  <!-- {{ i + 1 }}. -->
-                  {{ translateSeedStage(farmerReport.seedStage) }}
-                  <ion-icon title="unverified" name="checkmark-circle-outline" color="primary"></ion-icon>
-                </span>
-              </ng-template>
+              <ion-chip style="margin-left: -5px; background-color: #468b62; color:white; margin-bottom: 0px;">{{ 'Ang report na ito ay nasuri na ni ' + farmerReport.verifier.firstName + ' ' + farmerReport.verifier.lastName }}</ion-chip>
             </ion-col>
 
-            <ion-col size="3" style="text-align: right">
+            <ion-col id="reportDate" size="3" style="color: #ffffff" title="{{ farmerReport.createdAt | date: 'hh:mm aa'}}">
               {{ farmerReport.createdAt | date: 'dd MMM yyyy'}}<br>
-              {{ farmerReport.createdAt | date: 'hh:mm aa'}}
+              <!-- {{ farmerReport.createdAt | date: 'hh:mm aa'}} -->
             </ion-col>
           </ion-row>
+        </div> 
+        <ng-template #unverified>
+          <ion-row style="background-color: #e9e9e9;padding:20px; margin-bottom: 5px; border-radius:50px">
+            <ion-col size="9" style="color:black">
+              <div>
+                <span class="text" style="font-weight: bold;">
+                  {{ translateSeedStage(farmerReport.seedStage) }}
+                </span>
+              </div>
+              <ion-chip style="margin-left: -5px"color="danger">Ang itong report ay hindi pa nasusuri</ion-chip>
+            </ion-col>
+
+            <ion-col id="reportDate" size="3" style="color:black" title="{{ farmerReport.createdAt | date: 'hh:mm aa'}}">
+              {{ farmerReport.createdAt | date: 'dd MMM yyyy'}}<br>
+              <!--  -->
+            </ion-col>
+          </ion-row>
+        </ng-template>
         </ion-grid>
       </ion-card-content>
     </ion-card>
