--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -44,3 +44,11 @@ ion-select-option {
     width: 500px !important;
     max-width: 600px !important;
 }
+
+#reportDate{
+    text-align: right; 
+}
+
+#reportDate:hover{
+    text-decoration: underline;
+}
