--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
           </ion-item>
         </form>
 
-        <h1 *ngIf="currentSeedStage; else noCurrentSeedStage" style="padding-top: 1em;">{{
+        <h1 *ngIf="currentSeedStage; else noCurrentSeedStage" style="padding-top: 1em;" translate>{{
           translateSeedStage(currentSeedStage) }}</h1>
         <ng-template #noCurrentSeedStage>
           <h1 style="padding-top: 1em;"routerLink='/home' translate>home.stage-1_title</h1>
@@ -37,7 +37,7 @@
 
         <p style="margin-bottom: 0.75em" routerLink='/home' translate>home.report-button-header</p>
 
-        <button *ngIf="nextSeedStage" id="aniButton" (click)="onBeginSubmitFarmerReport()">
+        <button *ngIf="nextSeedStage" id="aniButton" (click)="onBeginSubmitFarmerReport()" translate>
           {{ translateSeedStage(nextSeedStage) }}
         </button>
 
@@ -90,7 +90,7 @@
           <ion-row style="background-color: #356649;padding:20px; margin-bottom: 5px; border-radius:50px">
             <ion-col size="9" style="color:#ffffff;">
               <div>
-                <span class="text" style="font-weight: bold;">
+                <span class="text" style="font-weight: bold;" translate>
                   {{ translateSeedStage(farmerReport.seedStage) }}
                 </span>
               </div>
@@ -107,7 +107,7 @@
           <ion-row style="background-color: #e9e9e9;padding:20px; margin-bottom: 5px; border-radius:50px">
             <ion-col size="9" style="color:black">
               <div>
-                <span class="text" style="font-weight: bold;">
+                <span class="text" style="font-weight: bold;" translate>
                   {{ translateSeedStage(farmerReport.seedStage) }}
                 </span>
               </div>
